[gd_scene load_steps=6 format=3 uid="uid://cf27r8vjqk6av"]

[ext_resource type="Script" path="res://Player/Upgrades/player_upgrade_button.gd" id="1_k3qr4"]
[ext_resource type="Texture2D" uid="uid://dg1yjr0eocbr6" path="res://Player/Upgrades/Meta/Lucky Dice.png" id="3_7mng6"]
[ext_resource type="Texture2D" uid="uid://bnu7ashmt28b4" path="res://Player/Upgrades/Player Upgrade Button.png" id="3_oop5q"]
[ext_resource type="Texture2D" uid="uid://d0jeqndrjomyx" path="res://Player/Upgrades/Tooltip Line.png" id="4_k32ef"]

[sub_resource type="LabelSettings" id="LabelSettings_mevve"]

[node name="PlayerUpgradeButton" type="TextureButton"]
custom_minimum_size = Vector2(80, 80)
offset_right = 80.0
offset_bottom = 80.0
focus_mode = 0
texture_normal = ExtResource("3_oop5q")
stretch_mode = 3
script = ExtResource("1_k3qr4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(40, 47)
texture = ExtResource("3_7mng6")

[node name="Tooltip" type="Sprite2D" parent="."]
visible = false
z_index = 2
z_as_relative = false
texture = ExtResource("4_k32ef")
centered = false
offset = Vector2(-5, -8)

[node name="HoverTooltipName" type="ColorRect" parent="Tooltip"]
z_index = 2
z_as_relative = false
offset_left = 30.0
offset_top = 1.0
offset_right = 97.0
offset_bottom = 36.0
mouse_filter = 2
color = Color(0.666667, 0.745098, 0.823529, 1)

[node name="HoverTooltipNameInner" type="ColorRect" parent="Tooltip/HoverTooltipName"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 62.0
offset_bottom = 30.0
color = Color(1, 0.8, 1, 0.501961)

[node name="HoverTooltipNameLabel" type="Label" parent="Tooltip/HoverTooltipName"]
layout_mode = 1
offset_left = 10.0
offset_top = 5.0
offset_right = 57.0
offset_bottom = 28.0
pivot_offset = Vector2(-5, 0)
text = "NAME"

[node name="HoverTooltipDescription" type="ColorRect" parent="Tooltip"]
z_index = 2
z_as_relative = false
offset_left = 30.0
offset_top = 43.0
offset_right = 139.0
offset_bottom = 78.0
mouse_filter = 2
color = Color(0.666667, 0.745098, 0.823529, 1)

[node name="HoverTooltipDescriptionInner" type="ColorRect" parent="Tooltip/HoverTooltipDescription"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 104.0
offset_bottom = 30.0
color = Color(1, 0.8, 1, 0.5)

[node name="HoverTooltipDescriptionLabel" type="Label" parent="Tooltip/HoverTooltipDescription"]
layout_mode = 1
offset_left = 10.0
offset_top = 5.0
offset_right = 99.0
offset_bottom = 28.0
text = "Description"

[node name="CounterLabel" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = 52.0
offset_top = 63.0
offset_right = 92.0
offset_bottom = 86.0
label_settings = SubResource("LabelSettings_mevve")
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="resized" from="Tooltip/HoverTooltipName/HoverTooltipNameLabel" to="." method="_on_hover_tooltip_name_label_resized"]
[connection signal="resized" from="Tooltip/HoverTooltipDescription/HoverTooltipDescriptionLabel" to="." method="_on_hover_tooltip_description_label_resized"]
